# sudoku_solver

./: Makefile.in  config.h.in  config.h.in~  configure  configure.ac
autom4te.cache/: output.0  traces.0  traces.1
src/: Makefile.am  Makefile.in  debugp.c  debugp.h  sudokusolver.c  sudokusolver.h
src/puzzles/: puzzle.in  puzzle2.in  puzzle5.in  puzzle7.in
